--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,13 @@ body {
     font-family: 'Courier New', Courier, monospace;
 }
 
+/* --- Field Visualization --- */
+canvas#field-canvas {
+    background-color: #059669; /* green-700 */
+    border-left: 2px solid rgba(255,255,255,0.5);
+    border-right: 2px solid rgba(255,255,255,0.5);
+    /* Set a max-width to be responsive but not huge */
+    max-width: 100%;
+    height: auto;
+}
+
